--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "concurrently": "^6.2.1",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.0",
+    "tsc": "^2.0.3",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
   },
