fixed docker support

--- a/.dockerignore
+++ b/.dockerignore
@@ -22,7 +22,7 @@ client/.pnp.js
 
 todo.txt
 
-/client/config/config.ts
-/src/config/config.ts
+/client/config/config.json
+/src/config/config.json
 nodemon.json
 nodemon-example.json
