--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "editor.insertSpaces": true,
+    "editor.tabSize": 4,
+    "editor.useTabStops": true,
     "editor.formatOnSave": true,
     "emmet.includeLanguages": {
         "javascript": "javascriptreact"
