--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
     "editor.insertSpaces": true,
-    "editor.tabSize": 4,
+    "editor.tabSize": 2,
     "editor.useTabStops": true,
     "editor.formatOnSave": true,
     "emmet.includeLanguages": {
         "javascript": "javascriptreact"
+     },
+     "[typescript]": {
+         "editor.defaultFormatter": "esbenp.prettier-vscode"
      },
      "[typescriptreact]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
