--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "client": "npm start --prefix client",
     "server": "nodemon --config nodemon.json src/app.ts",
     "server:debug": "nodemon --config nodemon.json --inspect-brk src/app.ts",
-    "test": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,20 +23,27 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.1",
     "@types/connect-flash": "^0.0.37",
-    "@types/connect-mongo": "^3.1.3",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/ejs": "^3.0.7",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
-    "@types/express-validator": "^3.0.0",
-    "@types/mongoose": "^5.11.97",
+    "@types/faker": "^5.5.8",
+    "@types/jest": "^26.0.24",
     "@types/node": "^16.6.1",
     "@types/passport": "^1.0.7",
     "@types/passport-local": "^1.0.34",
+    "@types/supertest": "^2.0.11",
+    "@types/validator": "^13.6.3",
+    "babel-jest": "^26.6.0",
     "concurrency": "^0.1.4",
     "concurrently": "^6.2.1",
+    "dotenv": "^10.0.0",
+    "faker": "^5.5.3",
+    "jest": "26.6.0",
     "nodemon": "^2.0.12",
+    "supertest": "^6.1.5",
+    "ts-jest": "^26.0.0",
     "ts-node": "^10.2.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
@@ -56,6 +64,7 @@
     "mongoose": "^5.13.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "validator": "^10.11.0"
   }
 }
