vscode task support

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,25 +1,28 @@
 {
-    "recommendations": [
-        "dbaeumer.vscode-eslint",
-		"ms-vscode.node-debug2",
-		"msjsdiag.debugger-for-chrome",
-		"coenraads.bracket-pair-colorizer-2",
-		"hookyqr.beautify",
-		"ms-azuretools.vscode-docker",
-		"digitalbrainstem.javascript-ejs-support",
-		"taodongwu.ejs-snippets",
-		"dsznajder.es7-react-js-snippets",
-		"eamodio.gitlens",
-		"pkosta2005.heroku-command",
-		"ecmel.vscode-html-css",
-		"xabikos.javascriptsnippets",
-		"eg2.vscode-npm-script",
-		"fknop.vscode-npm",
-		"equimper.react-native-react-redux",
-		"ms-vscode-remote.vscode-remote-extensionpack",
-		"shan.code-settings-sync",
-		"thezhir.vscode-snippets",
-		"redhat.vscode-yaml",
-        "mongodb.mongodb-vscode"
-    ]
+  "recommendations": [
+    "dbaeumer.vscode-eslint",
+    "ms-vscode.node-debug2",
+    "msjsdiag.debugger-for-chrome",
+    "coenraads.bracket-pair-colorizer-2",
+    "hookyqr.beautify",
+    "ms-azuretools.vscode-docker",
+    "digitalbrainstem.javascript-ejs-support",
+    "taodongwu.ejs-snippets",
+    "dsznajder.es7-react-js-snippets",
+    "eamodio.gitlens",
+    "pkosta2005.heroku-command",
+    "ecmel.vscode-html-css",
+    "xabikos.javascriptsnippets",
+    "eg2.vscode-npm-script",
+    "fknop.vscode-npm",
+    "equimper.react-native-react-redux",
+    "ms-vscode-remote.vscode-remote-extensionpack",
+    "shan.code-settings-sync",
+    "thezhir.vscode-snippets",
+    "redhat.vscode-yaml",
+    "mongodb.mongodb-vscode",
+    "ritwickdey.live-sass",
+    "auchenberg.vscode-browser-preview",
+    "stevencl.adddoccomments"
+  ]
 }
