--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build": "tsc",
     "start": "node dist/app.js",
     "client": "npm start --prefix client",
+    "silent-client": "npm run silent-start --prefix client",
     "server": "nodemon --config nodemon.json src/app.ts",
     "server:debug": "nodemon --config nodemon.json --inspect-brk src/app.ts",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "silent-dev": "concurrently \"npm run server\" \"npm run silent-client\"",
     "test": "jest",
     "coverage": "jest --collectCoverage"
   },
@@ -39,6 +41,7 @@
     "babel-jest": "^26.6.0",
     "concurrency": "^0.1.4",
     "concurrently": "^6.2.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "faker": "^5.5.3",
     "jest": "26.6.0",
