--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,11 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "Open Browser Preview",
+      "command": "${command:simpleBrowser.show}",
+      "problemMatcher": []
+    },
+    {
       "type": "npm",
       "script": "build",
       "group": "build",
@@ -41,11 +46,15 @@
     },
     {
       "type": "npm",
-      "script": "dev",
-      "dependsOn": ["npm: install -D", "npm: install -D - client"],
+      "script": "silent-dev",
+      "dependsOn": [
+        "npm: install -D",
+        "npm: install -D - client",
+        "Open Browser Preview"
+      ],
       "problemMatcher": [],
-      "label": "npm: dev",
-      "detail": "concurrently \"npm run server\" \"npm run client\"",
+      "label": "npm: silent-dev",
+      "detail": "concurrently \"npm run server\" \"npm run silent-client\"",
       "runOptions": {
         "runOn": "folderOpen"
       },
@@ -57,6 +66,14 @@
         "showReuseMessage": true,
         "clear": false
       }
+    },
+    {
+      "type": "npm",
+      "script": "dev",
+      "dependsOn": ["npm: install -D", "npm: install -D - client"],
+      "problemMatcher": [],
+      "label": "npm: dev",
+      "detail": "concurrently \"npm run server\" \"npm run client\""
     },
     {
       "type": "npm",
