--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "build-scss": "sass scss/style.scss:src/assets/style.css",
     "build-css": "postcss tailwind-src/tailwind.css -o src/assets/main.css && npm run build-scss",
     "start": "react-scripts start",
+    "silent-start": "cross-env BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -55,6 +56,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.1.8",
+    "cross-env": "^7.0.3",
     "react-express-template": "file:..",
     "sass": "^1.37.5"
   }
