change chrome debugger

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
     },
     {
       "name": "Debug Client",
-      "type": "chrome",
+      "type": "pwa-chrome",
       "request": "launch",
       "url": "http://localhost:3000/",
       "webRoot": "${workspaceFolder}/client",
