--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,19 +15,35 @@
       "envFile": "${workspaceFolder}/.env"
     },
     {
-      "name": "Debug Client",
+      "name": "Launch Client",
       "type": "pwa-chrome",
       "request": "launch",
       "url": "http://localhost:3000/",
       "webRoot": "${workspaceFolder}/client",
       "preLaunchTask": "npm: silent-client",
-      "postDebugTask": "Terminate All Tasks"
+      "postDebugTask": "Terminate All Tasks",
+      "port": 9222
+    },
+    {
+      "type": "pwa-chrome",
+      "request": "attach",
+      "name": "Attach Debugger to Client",
+      "preLaunchTask": "Sleep",
+      "port": 9222
     }
   ],
   "compounds": [
     {
       "name": "Debug All",
-      "configurations": ["Debug Client", "Debug Server"]
+      "configurations": [
+        "Launch Client",
+        "Debug Server",
+        "Attach Debugger to Client"
+      ]
+    },
+    {
+      "name": "Debug Client",
+      "configurations": ["Launch Client", "Attach Debugger to Client"]
     }
   ]
 }
