backend jwt support

--- a/.env-sample
+++ b/.env-sample
@@ -5,4 +5,6 @@ DB_IP=localhost
 DB_PORT=27017
 DB_NAME=template
 SECRET=PLEASECHANGE2LONG&RANDOMSECRET
+REFRESH_TOKEN_SECRET=ANOTHERSECRETCHANEME
+ACCESS_TOKEN_SECRET=ANOTHERLONGSECRETPLEASECHANGE
 PORT=5000
