--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
     "@types/express-session": "^1.17.4",
     "@types/faker": "^5.5.8",
     "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^16.6.1",
-    "@types/passport": "^1.0.7",
-    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.6.3",
     "babel-jest": "^26.6.0",
@@ -65,9 +64,8 @@
     "express-session": "^1.17.2",
     "express-validator": "^5.3.1",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.7",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "validator": "^10.11.0"
   }
