--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
 test:
   image: node:latest
   stage: test
+  needs: []
   services:
     - mongo
   script:
@@ -24,6 +25,8 @@ test:
 build_jwt:
   image: docker:latest
   stage: build_image
+  needs:
+    - test
   variables:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: "/certs"
@@ -45,6 +48,8 @@ build_jwt:
 build_image:
   image: docker:latest
   stage: build_image
+  needs:
+    - test
   variables:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: "/certs"
