--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -217,6 +217,8 @@ deploy_staging:
     on_stop: stop_staging
   only:
     - cookieAuth-staging
+  services:
+    - docker:dind
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
@@ -238,6 +240,8 @@ stop_staging:
   only:
     - cookieAuth-staging
   when: manual
+  services:
+    - docker:dind
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
@@ -267,6 +271,8 @@ deploy_jwt_staging:
     on_stop: stop_jwt_staging
   only:
     - jwt-staging
+  services:
+    - docker:dind
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
@@ -288,6 +294,8 @@ stop_jwt_staging:
   only:
     - jwt-staging
   when: manual
+  services:
+    - docker:dind
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
