ci: change image names

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,8 +63,8 @@ build_jwt_staging:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
-    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:staging-jwt-$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:staging-jwt .
-    - docker push $CI_REGISTRY_IMAGE:staging-jwt-$CI_COMMIT_SHA
+    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:staging-jwt .
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
     - docker push $CI_REGISTRY_IMAGE:staging-jwt
   after_script:
     - docker logout $CI_REGISTRY
@@ -90,8 +90,9 @@ build_jwt_branch:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
-    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:staging-jwt-$CI_COMMIT_SHA .
-    - docker push $CI_REGISTRY_IMAGE:staging-jwt-$CI_COMMIT_SHA
+    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:branch-jwt-$CI_COMMIT_BRANCH .
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+    - docker push $CI_REGISTRY_IMAGE:branch-jwt-$CI_COMMIT_BRANCH
   after_script:
     - docker logout $CI_REGISTRY
 
@@ -114,8 +115,8 @@ build_jwt:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
-    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA-jwt --tag $CI_REGISTRY_IMAGE:latest-jwt .
-    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA-jwt
+    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:latest-jwt .
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
     - docker push $CI_REGISTRY_IMAGE:latest-jwt
   after_script:
     - docker logout $CI_REGISTRY
@@ -139,8 +140,8 @@ build_staging:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
-    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:staging-$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:staging .
-    - docker push $CI_REGISTRY_IMAGE:staging-$CI_COMMIT_SHA
+    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:staging .
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
     - docker push $CI_REGISTRY_IMAGE:staging
   after_script:
     - docker logout $CI_REGISTRY
@@ -166,8 +167,9 @@ build_image_branch:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
-    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:staging-$CI_COMMIT_SHA .
-    - docker push $CI_REGISTRY_IMAGE:staging-$CI_COMMIT_SHA
+    - docker build --no-cache --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:branch-$CI_COMMIT_BRANCH .
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+    - docker push $CI_REGISTRY_IMAGE:branch-$CI_COMMIT_BRANCH
   after_script:
     - docker logout $CI_REGISTRY
 
