--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -220,11 +220,11 @@ deploy_staging:
     on_stop: stop_staging
   only:
     - cookieAuth-staging
-  services:
-    - docker:dind
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
+    - docker context create --docker host=$STAGING_HOST deploy
+    - docker context use deploy
     - docker pull $CI_REGISTRY_IMAGE:staging
     - docker stop $DOCKER_NAME || true
     - docker rm $DOCKER_NAME || true
@@ -244,9 +244,9 @@ stop_staging:
     - cookieAuth-staging
   when: manual
   cache: []
-  services:
-    - docker:dind
   script:
+    - docker context create --docker host=$STAGING_HOST deploy
+    - docker context use deploy
     - docker stop $DOCKER_NAME
     - docker rm $DOCKER_NAME
 
@@ -272,11 +272,11 @@ deploy_jwt_staging:
     on_stop: stop_jwt_staging
   only:
     - jwt-staging
-  services:
-    - docker:dind
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
+    - docker context create --docker host=$STAGING_HOST deploy
+    - docker context use deploy
     - docker pull $CI_REGISTRY_IMAGE:staging-jwt
     - docker stop $DOCKER_NAME || true
     - docker rm $DOCKER_NAME || true
@@ -296,8 +296,8 @@ stop_jwt_staging:
     - jwt-staging
   when: manual
   cache: []
-  services:
-    - docker:dind
   script:
+    - docker context create --docker host=$STAGING_HOST deploy
+    - docker context use deploy
     - docker stop $DOCKER_NAME
     - docker rm $DOCKER_NAME
