--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -221,16 +221,17 @@ deploy_staging:
   only:
     - cookieAuth-staging
   before_script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-  script:
     - docker context create --docker host=$STAGING_HOST deploy
     - docker context use deploy
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
+  script:
     - docker pull $CI_REGISTRY_IMAGE:staging
     - docker stop $DOCKER_NAME || true
     - docker rm $DOCKER_NAME || true
     - docker run -d --name $DOCKER_NAME -p $PORT:$CONTAINER_PORT -v $CONFIG_DIR:/app/config $CI_REGISTRY_IMAGE:staging
   after_script:
     - docker logout $CI_REGISTRY
+    - docker context use default
 
 stop_staging:
   stage: deploy
@@ -244,11 +245,13 @@ stop_staging:
     - cookieAuth-staging
   when: manual
   cache: []
-  script:
+  before_script:
     - docker context create --docker host=$STAGING_HOST deploy
     - docker context use deploy
+  script:
     - docker stop $DOCKER_NAME
     - docker rm $DOCKER_NAME
+    - docker context use default
 
 deploy_jwt_staging:
   stage: deploy
@@ -273,16 +276,17 @@ deploy_jwt_staging:
   only:
     - jwt-staging
   before_script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-  script:
     - docker context create --docker host=$STAGING_HOST deploy
     - docker context use deploy
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
+  script:
     - docker pull $CI_REGISTRY_IMAGE:staging-jwt
     - docker stop $DOCKER_NAME || true
     - docker rm $DOCKER_NAME || true
     - docker run -d --name $DOCKER_NAME -p $PORT:$CONTAINER_PORT -v $CONFIG_DIR:/app/config $CI_REGISTRY_IMAGE:staging-jwt
   after_script:
     - docker logout $CI_REGISTRY
+    - docker context use default
 
 stop_jwt_staging:
   stage: deploy
@@ -296,8 +300,10 @@ stop_jwt_staging:
     - jwt-staging
   when: manual
   cache: []
-  script:
+  before_script:
     - docker context create --docker host=$STAGING_HOST deploy
     - docker context use deploy
+  script:
     - docker stop $DOCKER_NAME
     - docker rm $DOCKER_NAME
+    - docker context use default
